# cpp-sdk-appwrite

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  Makefile  README.md  auth_example  conanfile.txt  mainpage.dox
.github/workflows/: doxygen.yml
docs/: Account.md  Databases.md  Health.md  Messaging.md  Storage.md
docs/html/: _account_8hpp.html  _account_8hpp.js  _account_8hpp__dep__incl.dot  _account_8hpp__incl.dot  _account_8hpp_source.html  _appwrite_8hpp.html  _appwrite_8hpp.js  _appwrite_8hpp__incl.dot  _appwrite_8hpp_source.html  _appwrite_exception_8hpp.html  _appwrite_exception_8hpp.js  _appwrite_exception_8hpp__dep__incl.dot  _appwrite_exception_8hpp__incl.dot  _appwrite_exception_8hpp_source.html  _config_8hpp.html  _config_8hpp.js  _config_8hpp__incl.dot  _config_8hpp_source.html  _databases_8hpp.html  _databases_8hpp.js  _databases_8hpp__dep__incl.dot  _databases_8hpp__incl.dot  _databases_8hpp_source.html  _health_8hpp.html  _health_8hpp.js  _health_8hpp__dep__incl.dot  _health_8hpp__incl.dot  _health_8hpp_source.html  _http_status_8hpp.html  _http_status_8hpp.js  _http_status_8hpp__dep__incl.dot  _http_status_8hpp_source.html  _messaging_8hpp.html  _messaging_8hpp.js  _messaging_8hpp__dep__incl.dot  _messaging_8hpp__incl.dot  _messaging_8hpp_source.html  _query_8hpp.html  _query_8hpp.js  _query_8hpp__dep__incl.dot  (+104 more)
examples/: auth_example.cpp  example_auth.cpp  full_flow_test.cpp  testSDK.cpp
examples/account/: createAccount.cpp  createSession.cpp
examples/database/: createCollection.cpp  createDatabase.cpp  createDocument.cpp  deleteCollection.cpp  getCollection.cpp  getCollectionUsage.cpp  getDatabase.cpp  getDatabaseUsage.cpp  listCollection.cpp  listDatabase.cpp  updateCollection.cpp  updateDatabase.cpp
examples/health/: getAntivirus.cpp  getCache.cpp  getDB.cpp  getHealth.cpp  getPubSub.cpp  getQueue.cpp  getStorage.cpp  getStorageLocal.cpp  getTime.cpp
include/: Appwrite.hpp  Auth.hpp  Utils.hpp  Validator.hpp
src/: Appwrite.cpp  Auth.cpp  Utils.cpp  Validator.cpp
src/services/: Auth.cpp  (+6 more)
tests/: Makefile  createAccount  createCollection  createDatabase  createDocument  createSession  deleteCollection  full_flow_test  getCollection  listCollection  listDatabase  updateCollection  updateDatabase
(+202 files in other folders)
